# LambChat

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README_CN.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: app-release.yml  lint.yml
docs/: agent-scheduled-task-design.md  index.md  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/en/: getting-started.md  index.md
docs/frontend/: ui-components.md
docs/zh/: getting-started.md  index.md
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/android/: capacitor.settings.gradle
frontend/scripts/: build-mobile.mjs  generate-branded-assets.mjs  migrate-tests.ts  package-desktop.mjs
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
k8s/: lambchat-secret.yaml.example  lambchat.yaml
nginx/: nginx.conf
src/api/: deps.py  main.py
src/infra/: pubsub_hub.py  runtime_services.py  websocket.py
src/kernel/: types.py
tests/: test_mcp_role_access.py  test_mcp_role_quota.py  test_mcp_tool_policies.py  test_sandbox_mcp_prompt_guidance.py
tests/agents/: test_disabled_skills_config_propagation.py  test_persona_preset_runtime.py
tests/api/: test_agent_catalog_config.py  test_agent_routes.py  test_deps_auth_cache.py  test_github_routes.py  test_marketplace_routes.py  test_mcp_routes.py  test_persona_preset_routes.py  test_request_body_limit.py  test_request_id_logging.py  (+5 more)
(+730 files in other folders)
