[package]
name = "lambchat"
version = "2.4.1"
description = "LambChat desktop app"
authors = ["LambChat"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "lambchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
